# expense-tracker-backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 442031e9903a_add_accounts_categories_transactions.py  66dad9d194aa_make_transaction_date_timezone_aware.py  d8e558d2530a_add_accounts_categories_transactions.py  ef2cfeaa741c_create_users_table.py  f61a6140218f_add_updated_at_field_to_accounts.py
app/: config.py  main.py
app/api/: accounts.py  categories.py  deps.py  transactions.py
app/database/: __init__.py  session.py
app/models/: __init__.py  account.py  category.py  transaction.py  user.py
app/schemas/: account_schema.py  category_schema.py  transaction_schema.py
app/services/: account_service.py  category_service.py  transaction_service.py  user_service.py
